[package]
name = "cosmic-time"
version = "0.4.0"
edition = "2021"
description = "An animation Crate for Iced and Cosmic DE"
authors = ["Brock Szuszczewicz <brock@szu.email>"]
license = "MIT"
repository = "https://github.com/pop-os/cosmic-time"
documentation = "https://docs.rs/cosmic-time"
keywords = ["gui", "animation", "interface", "widgets", "iced"]
categories = ["gui"]

[features]
default = ["iced"]
iced = ["dep:iced", "dep:iced_runtime", "dep:iced_widget", "dep:iced_futures", "dep:iced_core", "dep:iced_style"]
once_cell = ["dep:once_cell"]
wayland-libcosmic =  ["libcosmic", "libcosmic/wayland"]
winit-libcosmic =  ["libcosmic", "libcosmic/winit"]
libcosmic = ["dep:libcosmic"]

[workspace]
members = [
    "examples/*",
]

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "8727b3f", features = ["tokio"], optional = true }
# iced = { version = "0.12.0", features = [ "tokio" ], optional = true }
iced_runtime = { git = "https://github.com/iced-rs/iced", rev = "8727b3f", optional = true }
iced_widget = { git = "https://github.com/iced-rs/iced", rev = "8727b3f", optional = true }
iced_futures = { git = "https://github.com/iced-rs/iced", rev = "8727b3f", optional = true }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "8727b3f", optional = true }
iced_style = { git = "https://github.com/iced-rs/iced", rev = "8727b3f", optional = true }
libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = [ "tokio" ], branch = "update-0.12", optional = true }
# libcosmic = { path = "../libcosmic",  optional = true, features = [ "tokio" ]}
once_cell = { version = "1.18.0", optional = true }
float-cmp = "0.9"

