[package]
name = "cosmic-time"
version = "0.4.0"
edition = "2021"
description = "An animation Crate for libcosmic and Cosmic DE"
authors = ["Brock Szuszczewicz <brock@szu.email>"]
license = "MIT"
repository = "https://github.com/pop-os/cosmic-time"
documentation = "https://docs.rs/cosmic-time"
keywords = ["gui", "animation", "interface", "widgets", "libcosmic"]
categories = ["gui"]

[features]
once_cell = ["dep:once_cell"]

[workspace]
members = []

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = [
    "tokio",
] }
once_cell = { version = "1.18.0", optional = true }
float-cmp = "0.9"

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../fork/libcosmic" }
# cosmic-config = { path = "../fork/libcosmic/cosmic-config" }
# cosmic-theme = { path = "../fork/libcosmic/cosmic-theme" }
