[package]
name = "pokedex"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "8727b3f", features = ["image", "debug", "tokio"] }
cosmic-time = { path = "../..", default-features = false, features = ["iced", "once_cell"] }
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]
