[package]
name = "stopwatch"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>", "Brock Szuszczewicz <brock@szu.email>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.10.0", features = ["smol"] }
cosmic-time = { path = "../..", default-features = false, features = ["iced", "once_cell"] }

