[package]
name = "stopwatch"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>", "Brock Szuszczewicz <brock@szu.email>"]
edition = "2021"
publish = false

[dependencies]
iced = {  git = "https://github.com/iced-rs/iced", rev = "7f8b176", features = ["smol"] }
cosmic-time = { path = "../..", default-features = false, features = ["iced", "once_cell"] }

